tests/ui/pattern/usefulness/issue-4321.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/issue-4321.rs:3:31
   |
LL |     println!("foo {:}", match tup {
   |                               ^^^ pattern `(true, false)` not covered
   |
   = note: the matched value is of type `(bool, bool)`
help: ensure that all possible cases are being handled by adding an arm to handle the `(true, false)` case
   |
LL ~         (true, true) => "baz",
LL +         (true, false) => { todo!() },
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
